--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,12 @@
 [submodule "lib/mongoose/mongoose"]
 	path = lib/mongoose/mongoose
 	url = https://github.com/cesanta/mongoose.git
+[submodule "lib/rapidjson"]
+	path = lib/rapidjson
+	url = https://github.com/miloyip/rapidjson.git
+[submodule "lib/boost/system"]
+	path = lib/boost/system
+	url = https://github.com/boostorg/system.git
+[submodule "lib/boost/predef"]
+	path = lib/boost/predef
+	url = https://github.com/boostorg/predef
