Using system boost libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,13 @@ set(SRC_LIST
 # libs
 find_package(Threads REQUIRED)
 
+#set(Boost_USE_MULTITHREADED ON)
+find_package(Boost COMPONENTS system filesystem graph REQUIRED)
+#if(NOT BOOST_FOUND)
+	#message(FATAL_ERROR "You must install 'filesystem' and 'graph' boost components")
+#endif()
+include_directories(${Boost_INCLUDE_DIRS})
+
 include_directories(lib/mongoose)
 add_library(mongoose
 	lib/mongoose/mongoose/mongoose.c
@@ -31,40 +38,10 @@ add_library(rapidjson
 	lib/rapidjson_dummy.cpp
 )
 
-include_directories(lib/boost/predef/include)
-add_library(boost_predef
-	lib/boost_predef_dummy.cpp
-)
-
-include_directories(lib/boost/system/include)
-add_library(boost_system
-	lib/boost/system/src/error_code.cpp
-)
-
-include_directories(lib/boost/filesystem/include)
-add_library(boost_filesystem
-	lib/boost/filesystem/src/path.cpp
-	lib/boost/filesystem/src/portability.cpp
-	lib/boost/filesystem/src/codecvt_error_category.cpp
-	lib/boost/filesystem/src/unique_path.cpp
-	lib/boost/filesystem/src/utf8_codecvt_facet.cpp
-	lib/boost/filesystem/src/windows_file_codecvt.cpp
-	lib/boost/filesystem/src/operations.cpp
-	lib/boost/filesystem/src/path_traits.cpp
-)
-
-include_directories(lib/boost/algorithm/include)
-add_library(boost_algorithm
-	lib/boost_algorithm_dummy.cpp
-)
-
 set(LIB_LIST
 	mongoose
 	rapidjson
-	boost_predef
-	boost_system
-	boost_filesystem
-	boost_algorithm
+	${Boost_LIBRARIES}
 )
 
 # executable
