--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 CMakeCache.txt
-CMakeFiles
+CMakeFiles/
 Makefile
 cmake_install.cmake
 install_manifest.txt
-bin
+bin/
+lib/
+node_modules/
+.idea/
