--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,19 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(Rocket.CMS)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -g")
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/package)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/package)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/package)
-set(CMAKE_LEGACY_CYGWIN_WIN32 0)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -g -fpermissive")
 
 ### sources
 set(SRC_LIST
     src/cpp/rcms/CoreApp.cpp
-    src/cpp/rcms/CacheManager.h
-    src/cpp/rcms/tools/FsTools.h
-    src/cpp/rcms/tools/StringTools.h
-    src/cpp/rcms/tools/NetTools.h
+    src/cpp/rcms/CacheManager.cpp
+    src/cpp/rcms/tools/FsTools.cpp
+    src/cpp/rcms/tools/StringTools.cpp
+    src/cpp/rcms/tools/NetTools.cpp
     src/cpp/rcms/web/WebHandlerFactory.cpp
     src/cpp/rcms/web/IndexWebHandler.cpp
     src/cpp/rcms/web/ApiWebHandler.cpp
-    src/cpp/rcms/web/api/AbstractApiHandler.h
+    src/cpp/rcms/web/api/AbstractApiHandler.cpp
     src/cpp/rcms/web/api/FsApiHandler.cpp
     src/cpp/rcms/web/api/ConfApiHandler.cpp
     src/cpp/rcms/web/api/WebguiApiHandler.cpp
@@ -43,4 +39,3 @@ set(LIB_LIST
 # executable
 add_executable(${PROJECT_NAME} ${SRC_LIST})
 target_link_libraries(${PROJECT_NAME} ${LIB_LIST})
-
