--- a/src/web/markdownWysiwygEditor/package.json
+++ b/src/web/markdownWysiwygEditor/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "rcms",
-  "description": "Rocket.CMS frontend",
+  "name": "rcmspluginmwfe",
   "author": "Oleg Morozenkov",
   "license": "Apache 2.0",
   "repository": "https://github.com/reo7sp/Rocket.CMS",
@@ -8,7 +7,6 @@
     "coffee-script": "^1.9.3",
     "gulp": "^3.9.0",
     "gulp-add-src": "^0.2.0",
-    "gulp-autoprefixer": "^2.3.1",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-load-plugins": "^1.0.0-rc.1",
