--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,5 @@
-.idea/
-CMakeCache.txt
-CMakeFiles/
-Makefile
-cmake_install.cmake
-install_manifest.txt
-build/
-web/*/bin/
-web/*/lib/
-web/node_modules/
-.vagrant/
+*
+!cpp/
+!web/
+!CMakeLists.txt
+!*.sh
