--- a/web/package.json
+++ b/web/package.json
@@ -14,20 +14,23 @@
     "browserify": "^11.0.1",
     "coffee-script": "^1.9.3",
     "coffeeify": "^1.1.0",
+    "glob": "^5.0.14",
+    "globby": "^2.1.0",
     "gulp": "^3.9.0",
     "gulp-add-src": "^0.2.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-streamify": "^1.0.0",
     "gulp-stylus": "^2.0.5",
     "gulp-uglify": "^1.2.0",
     "jquery": "^2.1.4",
     "marked": "^0.3.5",
     "q": "^1.4.1",
+    "through2": "^2.0.0",
     "to-markdown": "^1.2.1",
     "underscore": "^1.8.3",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
