--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,8 @@
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-minify-html": "^1.0.4",
     "gulp-stylus": "^2.0.5",
     "gulp-uglify": "^1.2.0",
     "jquery": "^2.1.4",
